--- a/src/app/menu-principal/menu-principal.component.html
+++ b/src/app/menu-principal/menu-principal.component.html
@@ -7,7 +7,11 @@
     <mat-nav-list>
       <a mat-list-item routerLink="/login">Login</a>
       <a mat-list-item routerLink="/home">Home</a>
-      <a mat-list-item routerLink="/atender">Atender</a>
+      
+      <div *ngIf="(authS.user | async)">
+        <a mat-list-item routerLink="/atender">Atender</a>
+      </div>
+
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
