--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -14,9 +14,26 @@
 <!-- User logged in -->
 <ng-template #authenticated>
   <div *ngIf="auth.user | async as user">
-    <h3>Howdy, {{ user.displayName }}</h3>
+    <h3>Bienvenido, {{ user.displayName }}</h3>
     <img class="card-img-top" [src]="user.photoURL || 'https://api.adorable.io/avatars/109/fire.png'" width=50px>
     <p class="text-truncate">UID: {{ user.uid }}</p>
+    <p>Tu sede es: {{getSede(user.sede)}}</p>
+    <p>Tu rol es: {{user.rol}}</p>
     <button class="button" (click)="logout()">Logout</button>
+  </div>
+
+  <div *ngIf="auth.user | async as user"> 
+    <mat-grid-list cols="4" rowHeight="100px">
+      <mat-grid-tile>
+          <img class="card-img-top" [src]="user.photoURL || 'https://api.adorable.io/avatars/109/fire.png'" width=50px>
+
+      </mat-grid-tile>
+      <mat-grid-tile>
+          {{getSede(user.sede)}}
+    </mat-grid-tile>
+    <mat-grid-tile>
+        {{user.rol}}
+    </mat-grid-tile>
+    </mat-grid-list>
   </div>
 </ng-template>
