--- a/src/app/componentes/inventario/inventario.component.html
+++ b/src/app/componentes/inventario/inventario.component.html
@@ -36,7 +36,7 @@
     <ng-container matColumnDef="acciones">
       <th mat-header-cell *matHeaderCellDef> Acciones </th>   
       <td mat-cell *matCellDef="let element"> 
-        <button mat-raised-button color="primary">Editar</button> 
+        <button mat-raised-button (click)="editMed(element.ID)" color="primary">Editar</button> 
         <button mat-raised-button color="warn">Retirar</button> 
       </td>
     </ng-container>
