--- a/src/app/componentes/inventario/inventario.component.html
+++ b/src/app/componentes/inventario/inventario.component.html
@@ -1,5 +1,8 @@
+<mat-toolbar color="accent">    
+  <span>Inventario</span>    
+  <span class="demo-toolbar"></span>        
+</mat-toolbar>    
 
-  <h1>Inventario</h1>
   <mat-form-field>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar medicamento">
   </mat-form-field>
