--- a/src/app/componentes/atender/atender.component.html
+++ b/src/app/componentes/atender/atender.component.html
@@ -1,55 +1,80 @@
-<mat-card>
-    <mat-card-header>
-        <mat-card-title>Formulario atencion paciente</mat-card-title>
+<!-- Main Toolbar of an App -->    
+<mat-toolbar color="accent">    
+  <span>
+    Atender Paciente
+  </span>    
+  <span class="demo-toolbar"></span>    
+</mat-toolbar>    
+
+  <mat-card>
+      <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Datos personales</mat-card-title>
       </mat-card-header>
+
       <mat-card-content>
-    <mat-radio-group>
-        <mat-radio-button value="1">Estudiante</mat-radio-button>
-        <mat-radio-button value="2">Empleado</mat-radio-button>
-      </mat-radio-group>
-  <mat-grid-list cols="2" rowHeight="100px">
-    <form class="example-form">
-    <mat-grid-tile
-        [colspan]="1"
-        [rowspan]="1">
+          <div class="example-container">
+            <br>
+              <mat-radio-group [(ngModel)]="tipoPaciente">
+                  <mat-radio-button value="1">Estudiante</mat-radio-button>
+                  <mat-radio-button value="2">Empleado</mat-radio-button>
+              </mat-radio-group>
+              <mat-form-field>
+                  <input matInput placeholder="Nombre completo">
+              </mat-form-field>
 
-          <mat-form-field class="example-full-width">
-            <input type="number" matInput placeholder="No Identificacion" min="0">
-            <mat-icon matSuffix>panorama_wide_angle
-            </mat-icon>
-          </mat-form-field>
-          
-    </mat-grid-tile>
-    <mat-grid-tile
-        [colspan]="1"
-        [rowspan]="1">
+              <div class="example-container" *ngIf="tipoPaciente == '1'"> 
+                  <mat-form-field>
+                      <input matInput placeholder="Codigo">
+                  </mat-form-field>
+                  <mat-form-field>
+                      <input matInput placeholder="Semestre">
+                  </mat-form-field>
+              </div>
+              <div class="example-container" *ngIf="tipoPaciente == '2'"> 
+                  <mat-form-field>
+                      <mat-select placeholder="Estamento">
+                        <mat-option value="1">Administrativo</mat-option>
+                        <mat-option value="1">Docente</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  <mat-form-field>
+                      <input matInput placeholder="Cargo">
+                  </mat-form-field>
+              </div>
+            
+            </div>
+      </mat-card-content>
+  </mat-card>
+  <mat-divider></mat-divider>
 
-          <mat-form-field class="example-full-width">
-            <input type="text" matInput placeholder="Nombres y apellidos">
-            <mat-icon matSuffix>face</mat-icon>
-          </mat-form-field>
-          
-    </mat-grid-tile>
-    
-    <mat-grid-tile
-        [colspan]="2"
-        [rowspan]="3">
+  <mat-card>
+      <mat-card-header>
+          <div mat-card-avatar class="example-header-image"></div>
+          <mat-card-title>Observaciones medicas</mat-card-title>
+      </mat-card-header>
 
-          <mat-form-field class="example-full-width">
-            <input type="tel" matInput placeholder="Telephone">
-            <mat-icon matSuffix>accessibility</mat-icon>
-          </mat-form-field>
+      <mat-card-content>
+          <div class="example-container">            
+              <mat-form-field>
+                  <mat-label>Diagnostico medico</mat-label>
+                  <textarea matInput
+                            cdkTextareaAutosize
+                            #autosize="cdkTextareaAutosize"
+                            cdkAutosizeMinRows="2"
+                            cdkAutosizeMaxRows="5"></textarea>
+                </mat-form-field>
 
-    </mat-grid-tile>
-  </form>
-  </mat-grid-list>
-</mat-card-content>
-  
-  <mat-card-actions>
-      <button mat-button>Ok</button>
-    </mat-card-actions>
-</mat-card>
-
-
-
-
+                <mat-form-field>
+                    <mat-label>Observaciones</mat-label>
+                    <textarea matInput
+                              cdkTextareaAutosize
+                              #autosize="cdkTextareaAutosize"
+                              cdkAutosizeMinRows="2"
+                              cdkAutosizeMaxRows="5"></textarea>
+                  </mat-form-field>
+            </div>
+      </mat-card-content>
+  </mat-card>
+  <button mat-raised-button color="primary">Guardar</button>
+  <button mat-raised-button color="warn">Borrar</button>
