--- a/src/app/componentes/inventario/inventario.component.css
+++ b/src/app/componentes/inventario/inventario.component.css
@@ -19,3 +19,13 @@ table {
   .example-container > * {
     width: 100%;
   }
+
+  .demo-toolbar {    
+    display: flex;    
+    align-items: center;    
+    width: 100%;    
+  }    
+    
+  .demo-full-width {    
+    width: 100%;    
+  }    
