--- a/src/app/componentes/home/home.component.html
+++ b/src/app/componentes/home/home.component.html
@@ -1,21 +1,37 @@
-<div class="box" >
-  <div *ngIf="auth.user | async; then authenticated else guest">
+
+  <div class="container" *ngIf="auth.user | async; then authenticated else guest">
           <!-- template will replace this div -->
   </div>
-</div>
+
 
 <!-- User NOT logged in -->
-<ng-template #guest class="box">
-  <h3>Howdy, GUEST</h3>
-  <p class="card-text">Login to get started...</p>
-  <button class="button" routerLink="/login">Login</button>
-</ng-template>
+
+  <ng-template #guest>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <div class="icon-block">
+            <h2 class="text-center text-primary"><i class="material-icons">flash_on</i></h2>
+            <h5 class="text-center">Speeds up development</h5>
+
+            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+          </div>
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+      </div>
+    </div>
+  </ng-template>
 
 <!-- User logged in -->
 <ng-template #authenticated>
   <div *ngIf="auth.user | async as user">
     <h3>Bienvenido, {{ user.displayName }}</h3>
-    <img class="card-img-top" [src]="user.photoURL || 'https://api.adorable.io/avatars/109/fire.png'" width=50px>
+    <img class="img-fluid" [src]="user.photoURL || 'https://api.adorable.io/avatars/109/fire.png'" width=50px>
     <p class="text-truncate">UID: {{ user.uid }}</p>
     <p>Tu sede es: {{getSede(user.sede)}}</p>
     <p>Tu rol es: {{user.rol}}</p>
