--- a/src/app/componentes/consultar-historial/consultar-historial.component.html
+++ b/src/app/componentes/consultar-historial/consultar-historial.component.html
@@ -8,7 +8,7 @@
 
  
     <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar estudiante">
     </mat-form-field>
 
     <div class="mat-elevation-z8">
@@ -42,6 +42,14 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header> Semestre </th>
           <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.getSemestre}} </td>
         </ng-container>
+
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef> Acciones </th>   
+          <td mat-cell *matCellDef="let element"> 
+            <button mat-raised-button (click)="openDialog(element.documento, 1)" color="primary">Ver Historial</button> 
+            <button mat-raised-button color="warn">Desactivar</button> 
+          </td>
+        </ng-container>
     
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;">
@@ -64,7 +72,67 @@
 
     </div>
     <div class="col-sm">
-      One of three columns
+      
+      
+
+
+        <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar empleado">
+          </mat-form-field>
+      
+          <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSourceEmpleado" matSort>
+          
+              <!-- ID Column -->
+              <ng-container matColumnDef="documento">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Documento </th>
+                <td mat-cell *matCellDef="let row"> {{row.getDocumento}} </td>
+              </ng-container>
+          
+              <!-- Progress Column -->
+              <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
+                <td mat-cell *matCellDef="let row"> {{row.getNombre}} </td>
+              </ng-container>
+          
+              <!-- Name Column -->
+              <ng-container matColumnDef="cargo">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Cargo </th>
+                <td mat-cell *matCellDef="let row"> {{row.getCargo}} </td>
+              </ng-container>
+          
+              <!-- Color Column -->
+              <ng-container matColumnDef="estamento">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Estamento </th>
+                <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.getEstamento}} </td>
+              </ng-container>
+
+              <ng-container matColumnDef="acciones">
+                <th mat-header-cell *matHeaderCellDef> Acciones </th>   
+                <td mat-cell *matCellDef="let element"> 
+                  <button mat-raised-button (click)="openDialog(element.documento, 2)" color="primary">Ver Historial</button> 
+                  <button mat-raised-button color="warn">Desactivar</button> 
+                </td>
+              </ng-container>
+          
+              <tr mat-header-row *matHeaderRowDef="displayedColumnsEmpleado"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumnsEmpleado;">
+              </tr>
+            </table>
+          
+            <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+          </div>
+      
+      
+
+
+
+
+
+
+
+
+
     </div>
   </div>
 </div>
