--- a/src/app/componentes/consultar-historial/consultar-historial.component.html
+++ b/src/app/componentes/consultar-historial/consultar-historial.component.html
@@ -46,8 +46,10 @@
         <ng-container matColumnDef="acciones">
           <th mat-header-cell *matHeaderCellDef> Acciones </th>   
           <td mat-cell *matCellDef="let element"> 
-            <button mat-raised-button (click)="openDialog(element.documento, 1)" color="primary">Ver Historial</button> 
-            <button mat-raised-button color="warn">Desactivar</button> 
+            <button mat-raised-button  matTooltip="Ver registros medicos del paciente" 
+                  (click)="openDialog(element.documento, 1)" color="primary"><i class="fas fa-eye"></i></button> 
+                  <button mat-raised-button matTooltip="Desactivar paciente" color="warn"
+                  (click)="desactivarPaciente(element.documento, 1)"><i class="far fa-dizzy"></i></button>  
           </td>
         </ng-container>
     
@@ -77,7 +79,7 @@
 
 
         <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Buscar empleado">
+            <input matInput (keyup)="applyFilterEmpleado($event.target.value)" placeholder="Buscar empleado">
           </mat-form-field>
       
           <div class="mat-elevation-z8">
@@ -110,8 +112,10 @@
               <ng-container matColumnDef="acciones">
                 <th mat-header-cell *matHeaderCellDef> Acciones </th>   
                 <td mat-cell *matCellDef="let element"> 
-                  <button mat-raised-button (click)="openDialog(element.documento, 2)" color="primary">Ver Historial</button> 
-                  <button mat-raised-button color="warn">Desactivar</button> 
+                  <button mat-raised-button  matTooltip="Ver registros medicos del paciente" 
+                  (click)="openDialog(element.documento, 2)" color="primary"><i class="fas fa-eye"></i></button> 
+                  <button mat-raised-button matTooltip="Desactivar paciente" color="warn"
+                  (click)="desactivarPaciente(element.documento, 2)"><i class="far fa-dizzy"></i></button> 
                 </td>
               </ng-container>
           
